# ChatPorto

./: .env  app.py  pyproject.toml  requirements.txt  style.css
utils/: chatbot.py  text.py
